--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         h1 {
             color: #0066cc;
             font-size: 3em;
+            margin-top: 0;
         }
         h2 {
             color: #0066cc;
