--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             background-color: #f8f8f8;
             color: #333;
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            min-height: 100vh;
             flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
             text-align: center;
         }
         .donation-message-container {
@@ -27,15 +27,11 @@
             color: white;
             padding: 10px 0;
             font-size: 1.2em;
-            margin-top: 20px;
             border-radius: 5px;
         }
         .donation-message {
             display: inline-block;
             margin-right: 20px;
-        }
-        .donation-message span {
-            font-size: 1.1em;
         }
         .pix-key {
             font-size: 1.2em;
