--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             border-radius: 5px;
             border: 1px solid #ccc;
         }
+        .linkedin-link {
+            font-size: 1.1em;
+            margin-top: 20px;
+            color: #0066cc;
+            text-decoration: none;
+        }
+        .linkedin-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -121,6 +130,8 @@
 
         <h3>Resultados:</h3>
         <ul id="results"></ul>
+
+        <a href="https://www.linkedin.com/in/renato-m-santana-aa20601b9/" class="linkedin-link" target="_blank">Conecte-se comigo no LinkedIn</a>
     </div>
 
     <script>
