--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             width: 80%;
             max-width: 800px;
             background-color: #fff;
-            padding: 30px;
+            padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
@@ -58,7 +58,7 @@
         .button {
             background-color: #0066cc;
             color: white;
-            padding: 12px 25px;
+            padding: 10px 20px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -70,14 +70,14 @@
             background-color: #005bb5;
         }
         .participant {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
         #pix-key {
             display: none;
             margin-top: 10px;
         }
         input[type="text"] {
-            padding: 10px;
+            padding: 8px;
             width: 80%;
             margin: 5px;
             font-size: 1em;
@@ -110,7 +110,6 @@
 
     <div class="container">
         <h1>Amigo Secreto</h1>
-        <h2>Organize seu sorteio de amigo secreto facilmente</h2>
 
         <label for="organizer">Nome do Organizador:</label>
         <input type="text" id="organizer" placeholder="Nome do Organizador">
@@ -126,7 +125,7 @@
         </div>
 
         <button class="button" id="addParticipant">Adicionar Participante</button>
-        <button class="button" id="generatePairs">Gerar e Sortear</button>
+        <button class="button" id="generatePairs">Sortear</button>
 
         <h3>Resultados:</h3>
         <ul id="results"></ul>
