--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amigo Secreto</title>
+    <title>Amigo Secreto - Natal</title>
     <style>
         body {
             font-family: Georgia, Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
+            background-color: #f0f8ff;
             color: #333;
             display: flex;
             flex-direction: column;
@@ -18,21 +18,23 @@
             min-height: 100vh;
             text-align: center;
         }
+        /* Theme Header */
         .donation-message-container {
             display: flex;
             justify-content: center;
             align-items: center;
             width: 100%;
-            background-color: #0066cc;
+            background-color: #008000; /* Verde Natal */
             color: white;
             padding: 10px 0;
-            font-size: 1em;
+            font-size: 1.2em;
             border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
         .donation-message, .pix-key {
             display: inline-block;
             margin-right: 20px;
-            font-size: 1em; /* Garantir que o tamanho da fonte seja igual para ambos */
+            font-size: 1em; /* Tamanho igual para ambos */
         }
         .container {
             margin-top: 40px;
@@ -42,18 +44,23 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border: 2px solid #b30000; /* Bordas vermelhas para tema de natal */
         }
         h1 {
-            color: #0066cc;
-            font-size: 3em;
+            color: #b30000; /* Vermelho Natal */
+            font-size: 3.5em;
             margin-top: 0;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-family: 'Georgia', sans-serif;
         }
         h2 {
-            color: #0066cc;
-            font-size: 1.1em;
+            color: #008000; /* Verde Natal */
+            font-size: 1.2em;
+            font-weight: bold;
         }
         .button {
-            background-color: #0066cc;
+            background-color: #b30000; /* Vermelho Natal */
             color: white;
             padding: 10px 20px;
             border: none;
@@ -64,7 +71,7 @@
             transition: background-color 0.3s;
         }
         .button:hover {
-            background-color: #005bb5;
+            background-color: #990000; /* Tom mais escuro de vermelho */
         }
         .participant {
             margin-bottom: 10px;
@@ -84,15 +91,43 @@
         .linkedin-link {
             font-size: 1.1em;
             margin-top: 20px;
-            color: #0066cc;
+            color: #b30000;
             text-decoration: none;
         }
         .linkedin-link:hover {
             text-decoration: underline;
         }
+        /* Christmas elements */
+        .christmas-tree {
+            font-size: 3em;
+            color: #006400; /* Verde mais escuro */
+            margin: 20px 0;
+        }
+        .snowflakes {
+            font-size: 1.5em;
+            color: #fff;
+            position: fixed;
+            top: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: snowflakes 5s infinite;
+        }
+        @keyframes snowflakes {
+            0% {
+                top: -20%;
+                opacity: 1;
+            }
+            100% {
+                top: 100%;
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
+
+    <!-- Christmas decorations -->
+    <div class="snowflakes">❄️❄️❄️❄️❄️</div>
 
     <!-- Donation message with Pix Key -->
     <div class="donation-message-container">
@@ -106,7 +141,7 @@
     </div>
 
     <div class="container">
-        <h1>Amigo Secreto</h1>
+        <h1>Amigo Secreto - Natal</h1>
 
         <label for="organizer">Nome da Família:</label>
         <input type="text" id="organizer" placeholder="Nome da Família">
@@ -128,6 +163,8 @@
         <ul id="results"></ul>
 
         <a href="https://www.linkedin.com/in/renato-m-santana-aa20601b9/" class="linkedin-link" target="_blank">Conecte-se comigo no LinkedIn</a>
+
+        <div class="christmas-tree">🎄</div>
     </div>
 
     <script>
